--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+
+# Ignoring files in the Backend
+
+# assets
+assets
+
+# virtual environment
+env
