modify signin, signup, update, delete user

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DJANGO_SECRET_KEY='django-insecure-zpj82xv=^b@0(!ttxiay!$&bqs&+7z81ho1^z82=b=41a#uhn$'
 DEBUG=True
 DATABASE_NAME='poli_virtual'
+
+SECRET_KEY_TOKEN='BxxDRwZMx7j{:3_3S|s*9#U9TDlM<Y
