--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
     "clsx": "^2.0.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
