change category map

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ DEBUG=True
 DATABASE_NAME='poli_virtual'
 
 SECRET_KEY_TOKEN='BxxDRwZMx7j{:3_3S|s*9#U9TDlM<Y'
+
+URL_BACKEND='http://localhost:8000'
+
+URL_FRONTEND='http://localhost:3000'
