Modify .env file

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ SECRET_KEY_TOKEN='BxxDRwZMx7j{:3_3S|s*9#U9TDlM<Y'
 URL_BACKEND='http://localhost:8000'
 
 URL_FRONTEND='http://localhost:3000'
+
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER = 'polivirtual2023b@gmail.com'
+EMAIL_HOST_PASSWORD = 'jsdcutjzabgvnjpb'
