modify models in Course and add new endpoint upload_course_files

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ typing-extensions = "  4.8.0"
 tzdata = "             2023.3"
 python-decouple = "^3.8"
 pyjwt = "^2.8.0"
+pillow = "^10.2.0"
 
 
 [build-system]
