--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ URL_BACKEND='http://localhost:8000'
 
 URL_FRONTEND='http://localhost:3000'
 
+URL_IMAGE_COURSE_STORAGE = 'instructorsPhotos/'
+URL_VIDEO_COURSE_STORAGE = 'coursesVideos/'
+
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
