add endpoint update_profile_image

--- a/.env
+++ b/.env
@@ -8,8 +8,9 @@ URL_BACKEND='http://localhost:8000'
 
 URL_FRONTEND='http://localhost:3000'
 
-URL_IMAGE_COURSE_STORAGE = 'instructorsPhotos/'
-URL_VIDEO_COURSE_STORAGE = 'coursesVideos/'
+URL_IMAGE_COURSE_STORAGE = 'assets/coursesPhotos/'
+URL_VIDEO_COURSE_STORAGE = 'assets/coursesVideos/'
+URL_IMAGE_INSTRUCTOR_STORAGE = 'assets/instructorPhotos/'
 
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
