--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER = 'polivirtual2023b@gmail.com'
 EMAIL_HOST_PASSWORD = 'jsdcutjzabgvnjpb'
+
+AWS_ACCESS_KEY_ID='AKIAQXU427I432HIV2O2'
+AWS_SECRET_ACCESS_KEY='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'
+AWS_STORAGE_BUCKET_NAME = 'polivirtual.me'
