--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ tzdata = "             2023.3"
 python-decouple = "^3.8"
 pyjwt = "^2.8.0"
 pillow = "^10.2.0"
+boto3 = "^1.34.22"
+django-storages = "^1.14.2"
 
 
 [build-system]
