add new app content, modify structure in courses to manage the content of the course

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ URL_FRONTEND='http://localhost:3000'
 
 URL_IMAGE_COURSE_STORAGE = 'assets/coursesPhotos/'
 URL_VIDEO_COURSE_STORAGE = 'assets/coursesVideos/'
+URL_VIDEO_COURSE_CONTENT_STORAGE = 'assets/coursesVideos/content/'
 URL_IMAGE_INSTRUCTOR_STORAGE = 'assets/instructorPhotos/'
 
 EMAIL_HOST='smtp.gmail.com'
