--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ URL_IMAGE_INSTRUCTOR_STORAGE = 'assets/instructorPhotos/'
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
 EMAIL_HOST_USER = 'polivirtual2023b@gmail.com'
 EMAIL_HOST_PASSWORD = 'jsdcutjzabgvnjpb'
 
