--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,23 @@
 asgiref==3.7.2
+boto3==1.34.22
+botocore==1.34.22
 dataclasses==0.6
 Django==4.1.13
 django-cors-headers==4.3.1
+django-storages==1.14.2
 djangorestframework==3.14.0
 djongo==1.3.6
 dnspython==2.4.2
-pip==22.2.1
+jmespath==1.0.1
+pillow==10.2.0
 PyJWT==2.8.0
 pymongo==3.12.0
+python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3.post1
-setuptools==63.2.0
+s3transfer==0.10.0
+six==1.16.0
 sqlparse==0.2.4
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.7
