--- a/backend/app/.env
+++ b/backend/app/.env
@@ -4,9 +4,7 @@ DATABASE_NAME='poli_virtual'
 
 SECRET_KEY_TOKEN='BxxDRwZMx7j{:3_3S|s*9#U9TDlM<Y'
 
-URL_BACKEND='http://localhost:8000'
-
-URL_FRONTEND='http://localhost:3000'
+URL_FRONTEND='http://elb-frontend-1165388717.us-east-1.elb.amazonaws.com'
 
 URL_IMAGE_COURSE_STORAGE = 'assets/coursesPhotos/'
 URL_VIDEO_COURSE_STORAGE = 'assets/coursesVideos/'
