--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DATABASE_NAME='poli_virtual_2'
 
 SECRET_KEY_TOKEN='BxxDRwZMx7j{:3_3S|s*9#U9TDlM<Y'
 
-URL_FRONTEND='http://elb-frontend-1165388717.us-east-1.elb.amazonaws.com'
+URL_FRONTEND='https://polivirtual.me'
 
 URL_IMAGE_COURSE_STORAGE = 'assets/coursesPhotos/'
 URL_VIDEO_COURSE_STORAGE = 'assets/coursesVideos/'
